# htmltabs

./: .gitignore  README.md  create_repro.py  merged_repro.html  merged_repro_iframe.html  merged_repro_iframe_v2.html  pyproject.toml
htmltabs/: htmltabs.py
htmltabs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
repro_data/: file1.html  file2.html
test_dir/: file1.html  file2.html
