[project]
name = "htmltabs"
version = "0.1.1"
authors = [
    {name = "Michael Kaufman", email = "mlkaufman@gmail.com"},
]
description = "A CLI tool to merge HTML files into a single HTML file with tabs."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.6.0",
    "beautifulsoup4>=4.12.2"
]

[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"

[project.scripts]
htmltabs = "htmltabs.htmltabs:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["htmltabs*"]
exclude = ["repro_data*"]